--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,3 +5,8 @@ header{
     background-repeat: no-repeat;
     background-position: center;
 }
+#services{
+    background-image: url('/resources/images/laptop.jpg');
+    background-size: cover;
+    background-position: center;
+}
