--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,15 +5,20 @@ header{
     background-repeat: no-repeat;
     background-position: center;
 }
+
 #services{
     background-image: url('/resources/images/laptop.jpg');
     height: 40vh;
     background-size: cover;
     background-position: center;
 }
+
 #contact{
     background-image: url('/resources/images/engine.jpg');
     height: 50vh;
     background-size: cover;
     background-position: center;
+}
+#design-show,#dev-show,#product-show{
+    display: none;
 }
