--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,24 +1,242 @@
-header{
-    background-image: url('/resources/images/banner.jpg');
-    height: 100vh;
+.landing-page{
+    background-image: url("/resources/images/banner.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    height:110vh;
+    text-align: center;
+    color: white;
+    padding-top: 280px;
+
+}
+.logo{
+  padding-bottom: 30px;
+}
+.mouse{
+  padding-top: 90px;
+}
+h2{
+  text-align: center;
+  font-weight: bold;
+}
+p{
+  text-align: center;
+}
+.services{
+  background-image: url("/resources/images/laptop.jpg");
+  height:40vh;
+  color:white;
+  padding-top: 80px;
+}
+h3{
+  text-align: center;
+  font-weight: bold;
 }
 
-#services{
-    background-image: url('/resources/images/laptop.jpg');
-    height: 40vh;
-    background-size: cover;
-    background-position: center;
+#hide{
+  display: none;
+  color: black;
+}
+#hide1{
+  display:none;
+  color:black;
+}
+#hide2{
+  display: none;
+  color: black;
 }
 
-#contact{
-    background-image: url('/resources/images/engine.jpg');
-    height: 50vh;
-    background-size: cover;
-    background-position: center;
+#overlay{
+  display: none;
+  z-index: 99;
+  border: 1px solid white;
+  height: 85%;
+  color: white;
+  text-align: center;
+  font-size: calc(112% + 1vh);
+  background: rgba(0,0,0,0.7);
+  font-weight: bold;
 }
-#design-show,#dev-show,#product-show{
+#work8{
+  background: url(/resources/images/work8.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work7{
+  background: url(/resources/images/work7.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work6{
+  background: url(/resources/images/work6.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work5{
+  background: url(/resources/images/work5.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work4{
+  background: url(/resources/images/work4.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work3{
+  background: url(/resources/images/work3.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work2{
+  background: url(/resources/images/work2.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+#work1{
+  background: url(/resources/images/work1.jpg);
+  background-size: cover;
+  height: 30vh;
+  max-width: 22%;
+}
+
+.contact-us{
+  background: url("/resources/images/engine.jpg");
+  background-size: cover;
+  text-align: center;
+  height: 80vh;
+  margin: 0;
+  }
+  .user-info{
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  overflow: hidden;
+  }
+  #name{
+  float: left;
+  width: 48%;
+  margin: 5px;
+  color: white;
+  background: transparent;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  }
+  #email{
+  float: right;
+  width: 48%;
+  margin: 5px;
+  color: white;
+  background: transparent;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  }
+  #message{
+  width: 70rem;
+  background: transparent;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  color: white;
+  }
+  #btn{
     display: none;
-}
+  }
+  ::placeholder{
+    color: white;
+    opacity: 1;
+  }
+  
+  
+  @media (min-width: 1281px) {
+      #name{
+  width: 48%;
+  }
+  #email{
+  width: 48%;
+  }
+      #message{
+  width: 70rem;
+  }
+  #work1{
+    width: 48%;
+  }
+  }
+  
+  @media (min-width: 1025px) and (max-width: 1280px) {
+    #name{
+  width: 48%;
+  }
+  #email{
+  width: 48%;
+  }
+  #message{
+  width: 65rem;
+  
+  }
+  #work1{
+    width: 48%;
+  }
+  }
+  
+  @media (min-width: 768px) and (max-width: 1024px) {
+  #name{
+  width: 48%;
+  }
+  #email{
+  width: 48%;
+  }
+  #message{
+  width: 45rem;
+  }
+  }
+  
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    #name{
+  width: 48%;
+  }
+  #email{
+  width: 48%;
+  }
+    #message{
+  width: 45rem;
+  }
+  }
+  
+  @media (min-width: 481px) and (max-width: 767px) {
+  .message-form{
+  height: 80vh;
+  }
+    #name{
+  float: none;
+  width: 90%;
+  }
+  #email{
+  float: none;
+  width: 90%;
+  }
+    #message{
+  width: 30rem;
+  height: 30vh
+  }
+  }
+  
+  @media (max-width: 480px) {
+  .message-form{
+  height: 80vh;
+  }
+  #name{
+  float: none;
+  width: 90%;
+  }
+  #email{
+  float: none;
+  width: 90%;
+  }
+  #message{
+  width: 18rem;
+  }
+  }
