--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'PT Sans Narrow', sans-serif;
+}
 .landing-page{
     background-image: url("/resources/images/banner.jpg");
     background-size: cover;
