add changes to remove errors

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@
     font-family: 'PT Sans Narrow', sans-serif;
 }
 .landing-page{
-    background-image: url("/resources/images/banner.jpg");
+    background-image: url("../resources/images/banner.jpg");
     background-size: cover;
     height:110vh;
     text-align: center;
@@ -24,7 +24,7 @@ p{
   text-align: center;
 }
 .services{
-  background-image: url("/resources/images/laptop.jpg");
+  background-image: url("../resources/images/laptop.jpg");
   height:40vh;
   color:white;
   padding-top: 80px;
@@ -59,56 +59,56 @@ h3{
   font-weight: bold;
 }
 #work8{
-  background: url(/resources/images/work8.jpg);
+  background: url(../resources/images/work8.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work7{
-  background: url(/resources/images/work7.jpg);
+  background: url(../resources/images/work7.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work6{
-  background: url(/resources/images/work6.jpg);
+  background: url(../resources/images/work6.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work5{
-  background: url(/resources/images/work5.jpg);
+  background: url(../resources/images/work5.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work4{
-  background: url(/resources/images/work4.jpg);
+  background: url(../resources/images/work4.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work3{
-  background: url(/resources/images/work3.jpg);
+  background: url(../resources/images/work3.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work2{
-  background: url(/resources/images/work2.jpg);
+  background: url(../resources/images/work2.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 #work1{
-  background: url(/resources/images/work1.jpg);
+  background: url(../resources/images/work1.jpg);
   background-size: cover;
   height: 30vh;
   max-width: 22%;
 }
 
 .contact-us{
-  background: url("/resources/images/engine.jpg");
+  background: url("../resources/images/engine.jpg");
   background-size: cover;
   text-align: center;
   height: 80vh;
